Have GWT handle loading our style sheets and create modules for item, editem and msgs and have those bring along the stylesheets they need. So modular.

--- a/src/gwt/frame.gwt.xml.in
+++ b/src/gwt/frame.gwt.xml.in
@@ -20,6 +20,9 @@
   <source path="client/util"/>
 
   <public path="public/frame"/>
+  <stylesheet src="/css/global.css"/>
+  <stylesheet src="/css/gwt.css"/>
+  <stylesheet src="/css/frame.css"/>
 
   <entry-point class="client.frame.FrameEntryPoint"/>
 
