--- a/src/gwt/me.gwt.xml.in
+++ b/src/gwt/me.gwt.xml.in
@@ -1,16 +1,15 @@
 <module>
-  <inherits name="page"/>
+  <inherits name="item"/>
 
-  <source path="com/threerings/msoy/item/data/all"/>
-  <source path="com/threerings/msoy/item/gwt"/>
   <source path="com/threerings/msoy/person/gwt"/>
   <source path="com/threerings/msoy/badge/data/all"/>
 
-  <source path="client/item"/>
   <source path="client/person"/>
   <source path="client/me"/>
 
   <public path="public/me"/>
+  <stylesheet src="/css/person.css"/>
+  <stylesheet src="/css/me.css"/>
 
   <entry-point class="client.me.MePage"/>
 </module>
