--- a/src/gwt/swiftly.gwt.xml.in
+++ b/src/gwt/swiftly.gwt.xml.in
@@ -8,6 +8,7 @@
   <source path="client/swiftly"/>
 
   <public path="public/swiftly"/>
+  <stylesheet src="/css/swiftly.css"/>
 
   <entry-point class="client.swiftly.SwiftlyPage"/>
 </module>
