--- a/src/gwt/account.gwt.xml.in
+++ b/src/gwt/account.gwt.xml.in
@@ -4,6 +4,7 @@
   <source path="client/account"/>
 
   <public path="public/account"/>
+  <stylesheet src="/css/account.css"/>
 
   <entry-point class="client.account.AccountPage"/>
 </module>
