--- a/src/gwt/admin.gwt.xml.in
+++ b/src/gwt/admin.gwt.xml.in
@@ -4,6 +4,7 @@
   <source path="client/admin"/>
 
   <public path="public/admin"/>
+  <stylesheet src="/css/admin.css"/>
 
   <entry-point class="client.admin.AdminPage"/>
 </module>
