--- a/src/gwt/help.gwt.xml.in
+++ b/src/gwt/help.gwt.xml.in
@@ -4,6 +4,7 @@
   <source path="client/help"/>
 
   <public path="public/help"/>
+  <stylesheet src="/css/help.css"/>
 
   <entry-point class="client.help.HelpPage"/>
 </module>
