Bugfix: enforce proper name restrictions when creating an account as well as when changing your profile. I suck for not getting this right the first time.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -54,6 +54,12 @@ goldTip = Your current Gold balance
 levelTip = Your current Level
 
 #
+# ProfileBlurb and CreateAccountPanel
+
+displayNameInvalid = Your Whirled name must be between {0} and {1} characters long.
+nonSupportNameInvalid = ''Agent'' is reserved for Whirled staff. Sorry.
+
+#
 # Logon panel
 
 logonEmail = Email:
