More stylations.  Soon we'll be showing real badges.  Whee!

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -120,3 +120,4 @@ passportMarquee = Whirled Passport
 passportDescription = Your Whirled Passport stamps suggest fun things to do in Whirled and keep a \
   record of the fun you''ve had along the way.  Collect them all!
 passportNextBar = Go for these new stamps!
+passportStampsTitle = {0}''s Passport Stamps
