--- a/build.xml
+++ b/build.xml
@@ -209,7 +209,7 @@
   <property name="msgs1.list" value="shell.Shell,account.Account,admin.Admin,shop.Shop"/>
   <property name="msgs2.list" value="games.Games,whirleds.Whirleds,stuff.Stuff,editem.Editem"/>
   <property name="msgs3.list" value="item.Item,mail.Mail,msgs.Msgs,people.People,swiftly.Swiftly"/>
-  <property name="msgs4.list" value="world.World,me.Me,remix.Remix,help.Help,support.Support"/>
+  <property name="msgs4.list" value="room.Room,me.Me,remix.Remix,help.Help,support.Support"/>
   <property name="msgs5.list" value="landing.Landing,person.Person"/>
   <property name="msgsN.list" value="${msgs1.list},${msgs2.list},${msgs3.list},${msgs4.list}"/>
   <property name="gmsgs.list" value="${msgsN.list},${msgs5.list}"/>
@@ -217,7 +217,7 @@
   <!-- enumerate our GWT pages -->
   <property name="pages1.list" value="account,games,help,landing,mail,me,people"/>
   <!-- NOTE: admin should be in above list but it's freaking out right now -->
-  <property name="pages2.list" value="shop,stuff,support,swiftly,whirleds,world"/>
+  <property name="pages2.list" value="room,shop,stuff,support,swiftly,whirleds"/>
   <property name="gpages.list" value="frame,${pages1.list},${pages2.list}"/>
 
   <!-- declare our classpath -->
@@ -638,7 +638,7 @@
       <arg value="-output"/>
       <arg value="${deploy.dir}/MediaStub.swf"/>
       <arg value="-file-specs"/>
-      <arg value="${asrc.dir}/com/threerings/msoy/world/client/MediaStub.as"/>
+      <arg value="${asrc.dir}/com/threerings/msoy/room/client/MediaStub.as"/>
     </exec>
     <copy file="${deploy.dir}/MediaStub.swf" todir="pages/media"/>
   </target>
