--- a/src/gwt/room.gwt.xml.in
+++ b/src/gwt/room.gwt.xml.in
@@ -5,11 +5,11 @@
   <source path="com/threerings/msoy/comment/gwt"/>
   <source path="com/threerings/msoy/room/gwt"/>
 
-  <source path="client/world"/>
+  <source path="client/room"/>
   <source path="client/comment"/>
 
-  <public path="public/world"/>
-  <stylesheet src="/css/world.css"/>
+  <public path="public/room"/>
+  <stylesheet src="/css/room.css"/>
 
-  <entry-point class="client.world.WorldPage"/>
+  <entry-point class="client.room.RoomPage"/>
 </module>
