Not only did I put StampCategory in the wrong package, that commit will break the build because I forgot that you have to modify the *.gwt.xml.in files to tell them which packages to look for their classes in.

--- a/src/gwt/me.gwt.xml.in
+++ b/src/gwt/me.gwt.xml.in
@@ -3,6 +3,7 @@
 
   <source path="com/threerings/msoy/person/gwt"/>
   <source path="com/threerings/msoy/badge/data/all"/>
+  <source path="com/threerings/msoy/badge/gwt"/>
 
   <source path="client/person"/>
   <source path="client/me"/>
