Checking in work to display favorites lists in GWT. This is for backup and demo purposes, and these features are currently only visible to admin-type-folks. This is still a work in progress, and the favorites grid needs to get moved to its own page, but I want to get this in before mdb refactors something again. :)

--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -81,3 +81,9 @@ renameTitle = Rename a purchased item
 renameTip = You may customize the name of a purchased item, or revert \
 to the shop name.
 renameRevert = Revert
+
+#
+# Favorite PagedGrid
+favorites = Favorites
+noFavorites = No Favorites
+
