--- a/src/gwt/people.gwt.xml.in
+++ b/src/gwt/people.gwt.xml.in
@@ -13,6 +13,7 @@
   <source path="com/threerings/msoy/stuff/gwt"/>
   <source path="com/threerings/msoy/mail/gwt"/>
   <source path="com/threerings/msoy/badge/data/all"/>
+  <source path="com/threerings/msoy/badge/gwt"/>
   <source path="com/threerings/msoy/person/gwt"/>
   <source path="com/threerings/msoy/profile/gwt"/>
 
