More naughty hardcoded URLs that must be fixed.

--- a/src/gwt/client/help/HelpMessages.properties
+++ b/src/gwt/client/help/HelpMessages.properties
@@ -6,13 +6,14 @@
 #
 # HelpPanel
 
-helpReportBug = <a href="#whirleds-f_72">Report Bug</a>
+helpReportBug = <a target="_top" href="/#whirleds-f_72">Report Bug</a>
 
 helpTitle = Help
 
 helpIntro = <h2>Thank you</h2> for helping us test out Whirled! It is still a work in \
   progress, so bugs are bound to pop up every now and then.  We appreciate your \
-  <a href="#whirleds-f_72">bug reports</a> and <a href="#whirleds-f_19">feedback</a>.
+  <a target="_top" href="/#whirleds-f_72">bug reports</a> and \
+  <a target="_top" href="/#whirleds-f_19">feedback</a>.
 
 helpWikiTitle = Whirled Wiki
 helpWiki = The <a href="http://wiki.whirled.com" class="external" target="_blank">Whirled Wiki</a> \
@@ -24,8 +25,8 @@ helpQuestionsIntro = Read our <b>FAQ</b> below to learn about Whirled quickly.  
   questions you don''t see answered here, check out the \
   <a href="http://wiki.whirled.com/Frequently_asked_questions" class="external" \
   target="_blank">Whirled Wiki FAQ</a> \
-  or the <a href="#whirleds-f_19">Brave New Whirled</a> message boards to ask a specific \
-  question and someone will help you out!
+  or the <a target="_top" href="/#whirleds-f_19">Brave New Whirled</a> message boards to ask \
+  a specific question and someone will help you out!
 helpQuestions = <h3>What is Whirled?</h3> <ul> \
   <li>Whirled is a web-based social network combined with a virtual world, in which you, \
   the player, can contribute and sell new avatars, room backdrops, music, pets and games.</li> \
@@ -47,8 +48,8 @@ helpQuestions = <h3>What is Whirled?</h3> <ul> \
   <h3>How do I find my friends?</h3> <ul> \
   <li>Click on the Friends tab to view any friends you''ve already made on Whirled. \
   No friends yet?  On the same page you are able to do a people search by real name, \
-  Whirled name, or e-mail address.  The next step is to <a href="#people-invites">invite</a> \
-  all your other friends to Whirled.</li> \
+  Whirled name, or e-mail address.  The next step is to \
+  <a target="_top" href="/#people-invites">invite</a> all your other friends to Whirled.</li> \
   </ul>
 
 helpTechTitle = Technical Info
