--- a/src/gwt/client/msgs/MsgsMessages.properties
+++ b/src/gwt/client/msgs/MsgsMessages.properties
@@ -73,8 +73,8 @@ msgNewThreadPosted = New thread posted.
 noThreads = There are no discussion threads.
 
 noUnreadThreads = None of the Whirleds of which you are a member have new discussion \
-  messages.<br/><br/>You can go to the <a href="#whirleds">Whirleds</a> page to find \
-  and join new Whirleds or to read old messages.
+  messages.<br/><br/>You can go to the <a target="_top" href="/#whirleds">Whirleds</a> \
+  page to find and join new Whirleds or to read old messages.
 
 tlpStartNewThread = Start New Thread
 tlpRefresh = Refresh
