--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -8,7 +8,8 @@
 
 headerFeed = My News
 emptyFeedNoFriends = This shows what your friends have been up to. Explore \
-  <a href="#whirleds">Whirleds</a> and play <a href="#games">Games</a> to meet new friends!
+  <a target="_top" href="/#whirleds">Whirleds</a> and play \
+  <a target="_top" href="/#games">Games</a> to meet new friends!
 emptyFeed = This shows what your friends have been up to on Whirled. \
   Your friends haven''t been doing much at all it seems.
 fullFeed = Show more...
