--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -55,7 +55,7 @@ detailGiftTip = You can send this item as a gift when not in use.
 detailGift = Send as Gift
 
 detailInUse = This item is in use.
-detailInUseInRoom = This item is being used in <a href="#world-s{0}">{1}</a>.
+detailInUseInRoom = This item is being used in <a target="_top" href="/#world-s{0}">{1}</a>.
 
 detailRename = Rename
 detailRemix = Remix
