Various admin cleaning up. For some extremely baffling reason, the GWT compiler seems to think that if the admin module is named admin, it doesn't specify an entry point. However, if we leave everything else exactly the same and change the name to adminz, then it's just fine. Perhaps the GWT compiler is l33t.

--- a/build.xml
+++ b/build.xml
@@ -215,8 +215,7 @@
   <property name="gmsgs.list" value="${msgsN.list},${msgs5.list}"/>
 
   <!-- enumerate our GWT pages -->
-  <property name="pages1.list" value="account,games,help,landing,mail,me,people"/>
-  <!-- NOTE: admin should be in above list but it's freaking out right now -->
+  <property name="pages1.list" value="account,adminz,games,help,landing,mail,me,people"/>
   <property name="pages2.list" value="room,shop,stuff,support,swiftly,whirleds"/>
   <property name="gpages.list" value="frame,${pages1.list},${pages2.list}"/>
 
