The bad news is that it is not safe to use an HTML widget (or call setHTML) anywhere in Whirled if that HTML might contain links. The good news is that you can use MsoyUI.createHTML() which will create a magical HTML widget that will both properly make Whirled links frame-aware and target and class external links so that they all consistently have the little "this is an external link" icon next to them.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -52,7 +52,7 @@ createDisplayNameTip = Your Whirled name is what other people will see in Whirle
 createCaptcha = Humanness:
 createCaptchaLoading = Loading Captcha...
 
-createTOS = <a target="_blank" href="http://wiki.whirled.com/Terms_of_Service">Terms of Service</a>:
+createTOS = <a href="http://wiki.whirled.com/Terms_of_Service">Terms of Service</a>:
 createTOSAgree = I agree to the Terms of Service
 
 createGo = Join now!
