--- a/src/gwt/client/help/HelpMessages.properties
+++ b/src/gwt/client/help/HelpMessages.properties
@@ -6,26 +6,24 @@
 #
 # HelpPanel
 
-helpReportBug = <a target="_top" href="/#whirleds-f_72">Report Bug</a>
+helpReportBug = <a href="#whirleds-f_72">Report Bug</a>
 
 helpTitle = Help
 
 helpIntro = <h2>Thank you</h2> for helping us test out Whirled! It is still a work in \
   progress, so bugs are bound to pop up every now and then.  We appreciate your \
-  <a target="_top" href="/#whirleds-f_72">bug reports</a> and \
-  <a target="_top" href="/#whirleds-f_19">feedback</a>.
+  <a href="#whirleds-f_72">bug reports</a> and <a href="#whirleds-f_19">feedback</a>.
 
 helpWikiTitle = Whirled Wiki
-helpWiki = The <a href="http://wiki.whirled.com" class="external" target="_blank">Whirled Wiki</a> \
+helpWiki = The <a href="http://wiki.whirled.com">Whirled Wiki</a> \
   provides tutorials and additional information for people who want to learn how to \
   create avatars, pets, toys and games for Whirled.
 
 helpQuestionsTitle = Asking Questions
 helpQuestionsIntro = Read our <b>FAQ</b> below to learn about Whirled quickly.  If you have \
   questions you don''t see answered here, check out the \
-  <a href="http://wiki.whirled.com/Frequently_asked_questions" class="external" \
-  target="_blank">Whirled Wiki FAQ</a> \
-  or the <a target="_top" href="/#whirleds-f_19">Brave New Whirled</a> message boards to ask \
+  <a href="http://wiki.whirled.com/Frequently_asked_questions">Whirled Wiki FAQ</a> \
+  or the <a href="#whirleds-f_19">Brave New Whirled</a> message boards to ask \
   a specific question and someone will help you out!
 helpQuestions = <h3>What is Whirled?</h3> <ul> \
   <li>Whirled is a web-based social network combined with a virtual world, in which you, \
@@ -49,14 +47,13 @@ helpQuestions = <h3>What is Whirled?</h3> <ul> \
   <li>Click on the Friends tab to view any friends you''ve already made on Whirled. \
   No friends yet?  On the same page you are able to do a people search by real name, \
   Whirled name, or e-mail address.  The next step is to \
-  <a target="_top" href="/#people-invites">invite</a> all your other friends to Whirled.</li> \
+  <a href="#people-invites">invite</a> all your other friends to Whirled.</li> \
   </ul>
 
 helpTechTitle = Technical Info
 helpTech = Whirled runs best in Mozilla Firefox, but should work in Internet Explorer \
   and Safari as well.  For optimum performance in Firefox, try using the \
-  <a href="http://www.mozilla.com/en-US/firefox/all-beta.html" class="external" \
-  target="_blank">Firefox 3 beta</a>. \
+  <a href="http://www.mozilla.com/en-US/firefox/all-beta.html">Firefox 3 beta</a>. \
   If you''re not seeing rooms or avatars, you probably need to \
   download the latest version of Flash from Adobe. \
   <p align="center"><a href="http://www.adobe.com/go/getflashplayer">\
@@ -64,17 +61,16 @@ helpTech = Whirled runs best in Mozilla Firefox, but should work in Internet Exp
 
 helpRulesTitle = Whirled Rules (it does)
 helpRules = By using Whirled, you agree to \
-  <a href="http://wiki.whirled.com/Terms_of_Service" class="external" target="_blank">these \
+  <a href="http://wiki.whirled.com/Terms_of_Service">these \
   Terms of Service</a>.  We have certain \
-  <a href="http://wiki.whirled.com/Community_Standards" class="external" target="_blank">rules \
+  <a href="http://wiki.whirled.com/Community_Standards">rules \
   and Community Standards</a> that must be obeyed, and if you think someone has broken \
-  these rules, <a href="http://wiki.whirled.com/Report" class="external" target="_blank">there \
+  these rules, <a href="http://wiki.whirled.com/Report">there \
   are several ways to report them</a> to the Whirled Agents.
 
 Whirled runs best in Mozilla Firefox, but should work in Internet Explorer \
   and Safari as well.  For optimum performance in Firefox, try using the \
-  <a href="http://www.mozilla.com/en-US/firefox/all-beta.html" class="external" \
-  target="_blank">Firefox 3 beta</a>. \
+  <a href="http://www.mozilla.com/en-US/firefox/all-beta.html">Firefox 3 beta</a>. \
   If you''re not seeing rooms or avatars, you probably need to \
   download the latest version of Flash from Adobe. \
   <p align="center"><a href="http://www.adobe.com/go/getflashplayer">\
