--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -73,70 +73,64 @@ catIntro15 = Not used.
 # Item tips
 
 itemUploadTitle1 = Upload your Images!
-itemUploadPitch1a = - Use them to <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Edit_Your_Room">decorate your room</a>
-itemUploadPitch1b = - Upload a picture for \
-  <a target="_top" href="/#people-@MEMBER_ID@">your Profile</a>
+itemUploadPitch1a = - Use them to \
+  <a href="http://wiki.whirled.com/Edit_Your_Room">decorate your room</a>
+itemUploadPitch1b = - Upload a picture for <a href="#people-@MEMBER_ID@">your Profile</a>
 itemUploadPitch1c = - Coming soon: create and share photo albums
 
 itemUploadTitle2 = Upload your Stories!
-itemUploadPitch2a = - Do it for <a target="_top" href="/#world">the kids</a>!
-itemUploadPitch2b = - Do it for <a target="_top" href="/#swiftly">love of country</a>!
-itemUploadPitch2c = - Do it for <a target="_top" href="/#profile">the Gipper</a>!
+itemUploadPitch2a = - Do it for <a href="#world">the kids</a>!
+itemUploadPitch2b = - Do it for <a href="#swiftly">love of country</a>!
+itemUploadPitch2c = - Do it for <a href="#profile">the Gipper</a>!
 
 itemUploadTitle3 = Create your own Furniture!
-itemUploadPitch3a = - Learn how to <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Edit_Your_Room">decorate your room</a>
-itemUploadPitch3b = - Upload cool Furniture and <a target="_top" href="/#mail">mail \
-  it as a gift</a> to your friends
-itemUploadPitch3c = - Check out the <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Create_Furniture">Furniture making tutorial</a>
+itemUploadPitch3a = - Learn how to <a href="http://wiki.whirled.com/Edit_Your_Room">decorate \
+  your room</a>
+itemUploadPitch3b = - Upload cool Furniture and <a href="#mail">mail it as a gift</a> to your friends
+itemUploadPitch3c = - Check out the <a href="http://wiki.whirled.com/Create_Furniture">Furniture \
+  making tutorial</a>
 
 itemUploadTitle4 = Create your own Game!
-itemUploadPitch4a = - Check out the <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Create_Games">Game making tutorials</a>
-itemUploadPitch4b = - View and modify our <a class="external" target="_blank" \
-  href="http://code.threerings.net/viewvc/whirled/trunk/projects/games/">example \
-  games</a>.
-itemUploadPitch4c = - Make a Game and sell it in the <a target="_top" href="/#shop-4">shop</a>
+itemUploadPitch4a = - Check out the <a href="http://wiki.whirled.com/Create_Games">Game \
+  making tutorials</a>
+itemUploadPitch4b = - View and modify our \
+  <a href="http://code.threerings.net/viewvc/whirled/trunk/projects/games/">example games</a>.
+itemUploadPitch4c = - Make a Game and sell it in the <a href="#shop-4">shop</a>
 
 itemUploadTitle5 = Create your own Avatar!
-itemUploadPitch5a = - Check out the <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Create_Avatars">Avatar making tutorials</a>
-itemUploadPitch5b = - Buy a <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Remixable_avatar">remix avatar</a> and make one that''s \
-  uniquely yours!
-itemUploadPitch5c = - Make Avatars and sell them in the <a target="_top" href="/#shop-5">shop</a>
+itemUploadPitch5a = - Check out the <a href="http://wiki.whirled.com/Create_Avatars">Avatar \
+  making tutorials</a>
+itemUploadPitch5b = - Buy a <a href="http://wiki.whirled.com/Remixable_avatar">remix \
+  avatar</a> and make one that''s uniquely yours!
+itemUploadPitch5c = - Make Avatars and sell them in the <a href="#shop-5">shop</a>
 
 itemUploadTitle6 = Create your own Pet!
-itemUploadPitch6a = - Check out the <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Create_Pets">Pet making tutorials</a>
-itemUploadPitch6b = - Buy a <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Remixable_Items">remix pet</a> and make one that''s \
-  uniquely yours!
-itemUploadPitch6c = - Make Pets and sell them in the <a target="_top" href="/#shop-6">shop</a>
+itemUploadPitch6a = - Check out the <a href="http://wiki.whirled.com/Create_Pets">Pet \
+  making tutorials</a>
+itemUploadPitch6b = - Buy a <a href="http://wiki.whirled.com/Remixable_Items">remix \
+  pet</a> and make one that''s uniquely yours!
+itemUploadPitch6c = - Make Pets and sell them in the <a href="#shop-6">shop</a>
 
 itemUploadTitle7 = Upload your Music!
 itemUploadPitch7a = - Upload a Song and play it in your room
-itemUploadPitch7b = - <a target="_top" href="/#mail">Mail a Song</a> as a gift to a friend
+itemUploadPitch7b = - <a href="#mail">Mail a Song</a> as a gift to a friend
 itemUploadPitch7c = - Coming soon: create playlists and put a jukebox in your room
 
 itemUploadTitle8 = Upload your Videos!
 itemUploadPitch8a = - Put YouTube Videos in your room
-itemUploadPitch8b = - Upload <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Uploading_Videos">FLV Videos</a>
-itemUploadPitch8c = - <a target="_top" href="/#mail">Mail a Video</a> as a gift to a friend
+itemUploadPitch8b = - Upload <a href="http://wiki.whirled.com/Uploading_Videos">FLV Videos</a>
+itemUploadPitch8c = - <a href="#mail">Mail a Video</a> as a gift to a friend
 
 itemUploadTitle9 = Create your own Room Backdrop!
-itemUploadPitch9a = - Check out our tutorial on <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Create_Decor">making Backdrops</a>
+itemUploadPitch9a = - Check out our tutorial on \
+  <a href="http://wiki.whirled.com/Create_Decor">making Backdrops</a>
 itemUploadPitch9b = - Take a picture of a real room and use that as your room Backdrop
 itemUploadPitch9c =
 
 itemUploadTitle10 = Create your own Toys!
-itemUploadPitch10a = - Check out the <a class="external" target="_blank" \
-  href="http://wiki.whirled.com/Create_Toys">Toy making tutorials</a>
-itemUploadPitch10b = - Make Toys and sell them in the <a target="_top" href="/#shop-10">shop</a>
+itemUploadPitch10a = - Check out the <a href="http://wiki.whirled.com/Create_Toys">Toy \
+  making tutorials</a>
+itemUploadPitch10b = - Make Toys and sell them in the <a href="#shop-10">shop</a>
 itemUploadPitch10c =
 
 #
