Show a link to the original item on the game detail page for support+ so that they can easily mess with the game's original item even if the creator tries to sneakily list it as hidden.

--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -61,6 +61,8 @@ bitsPlayersSame = {0}
 bitsMinute = 1 minute
 bitsMinutes = {0} minutes
 
+bitsSeeOriginal = View source item...
+
 #
 # TrophyCasePanel
 
