- Pets and Avatars now require that they are SWFs (or remixable) to   be "consistent" (valid). - Consistency is enforced in the editors, but alter the primary media check   so that a nice message is given. - I guess team Zuch is going to see about popping up a panel suggesting   the easy-image avatar...

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -48,7 +48,7 @@ errAudioNotAudio = Audio data must be an MP3 file.
 avatarLabel = Avatar Media
 avatarTip = Avatar as seen in the World
 
-errAvatarNotFlash = Avatars must be a web-viewable media.
+errAvatarNotFlash = Avatars must be flash (SWF) files.
 
 #
 # DocumentEditor
@@ -101,7 +101,7 @@ errInvalidShot = The screenshot image must be a GIF, PNG or JPG and exactly {0}x
 petLabel = Pet Media
 petTip = Pet as seen in the World
 
-errPetNotFlash = Pets must be a web-viewable image type.
+errPetNotFlash = Pets must be flash (SWF) files.
 
 #
 # PhotoEditor
