We need this for gamestubs. It's too late to think about what the security implications are.

--- a/pages/crossdomain.xml.in
+++ b/pages/crossdomain.xml.in
@@ -1,6 +1,7 @@
 <cross-domain-policy>
    <allow-access-from domain="@SERVER_URL_HOST@" to-ports="*"/>
    <allow-access-from domain="first.whirled.com" to-ports="*"/>
+   <allow-access-from domain="*.kongregate.com" to-ports="*"/>
 </cross-domain-policy>
 <!--
   Notice:
